--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XL Replit</title>
 
-  <script src="popup.js"></script>
+  <script src="popup.js" defer></script>
+  <script src="2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
 </head>
 <body>
   <h1>XL Replit</h1>
@@ -23,5 +24,13 @@
 
   <h2>Suggest data</h2>
   <p>If you have some relevant data for someone's profile, please fill out <a href="https://xl-replit-backend.luisafk.repl.co/suggestData" target="_blank">this form</a> with the data and it will be reviewed by a moderator.</p>
+
+  <h2>Replit SID</h2>
+  <p>Some features of this extension require using your Replit session to perform authenticated actions via Replit's GraphQL. To enable these features, please enter your Replit SID bellow:</p>
+  <input type="text" id="sid-inp" placeholder="Enter your SID here..." disabled>
+  <div>
+    <button id="save-sid" disabled>Save</button>
+    <button id="delete-sid">Delete</button>
+  </div>
 </body>
 </html>
