--- a/popup.html
+++ b/popup.html
@@ -49,5 +49,14 @@
       <button id="save-sid" disabled>Save</button>
       <button id="delete-sid">Delete</button>
     </div>
+
+    <h2>Settings</h2>
+    <p>Toggle different features on or off.</p>
+    <div id="settings">
+      <div>
+        <input type="checkbox" name="old-cover-page" id="old-cover-page">
+        <label for="old-cover-page">Old cover pages</label>
+      </div>
+    </div>
   </body>
 </html>
