Add old cover pages to features list

--- a/popup.html
+++ b/popup.html
@@ -20,6 +20,7 @@
       <li>Shows a user's known alt accounts</li>
       <li>Easily download a user's profile picture</li>
       <li>Read-only invites for private Repls</li>
+      <li>Bring back old cover pages</li>
     </ul>
 
     <h2>Suggest data</h2>
