Fix features list

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
     <h2>Features</h2>
     <ul>
       <li>User's email addresses</li>
-      <li>Shows a user's known alt accounts</li>
+      <li>Shows a user's known alt accounts and other data</li>
       <li>Easily download a user's profile picture</li>
       <li>Read-only invites for private Repls</li>
       <li>Bring back old cover pages</li>
