Add setting to show Nix Modules tool

--- a/popup.html
+++ b/popup.html
@@ -58,6 +58,10 @@
         <input type="checkbox" name="old-cover-page" id="old-cover-page">
         <label for="old-cover-page">Old cover pages</label>
       </div>
+      <div>
+        <input type="checkbox" name="nix-modules-tool" id="nix-modules-tool">
+        <label for="nix-modules-tool">Show Nix modules tool</label>
+      </div>
     </div>
   </body>
 </html>
