Add extensions beta setting

--- a/popup.html
+++ b/popup.html
@@ -62,6 +62,10 @@
         <input type="checkbox" name="nix-modules-tool" id="nix-modules-tool">
         <label for="nix-modules-tool">Show Nix modules tool</label>
       </div>
+      <div>
+        <input type="checkbox" name="extensions-beta" id="extensions-beta">
+        <label for="extensions-beta">Extensions beta</label>
+      </div>
     </div>
   </body>
 </html>
