Add SSH tool setting

--- a/popup.html
+++ b/popup.html
@@ -66,6 +66,10 @@
         <input type="checkbox" name="extensions-beta" id="extensions-beta">
         <label for="extensions-beta">Extensions beta</label>
       </div>
+      <!-- <div>
+        <input type="checkbox" name="ssh-tool" id="ssh-tool">
+        <label for="ssh-tool">Show SSH tool</label>
+      </div> -->
     </div>
   </body>
 </html>
