--- a/popup.html
+++ b/popup.html
@@ -70,6 +70,10 @@
         <input type="checkbox" name="ssh-tool" id="ssh-tool">
         <label for="ssh-tool">Show SSH tool</label>
       </div> -->
+      <div>
+        <input type="checkbox" name="auto-debug" id="auto-debug">
+        <label for="auto-debug">Show debug pane</label>
+      </div>
     </div>
   </body>
 </html>
