Remove disabled SID input

--- a/popup.html
+++ b/popup.html
@@ -47,7 +47,8 @@
       disabled
     />
     <div>
-      <button id="save-sid" disabled>Save</button>
+      <!-- TODO: fix bug where this always stays disabled. Removed meanwhile -->
+      <button id="save-sid">Save</button>
       <button id="delete-sid">Delete</button>
     </div>
 
