Hide old cover pages setting

--- a/popup.html
+++ b/popup.html
@@ -54,10 +54,10 @@
     <h2>Settings</h2>
     <p>Toggle different features on or off.</p>
     <div id="settings">
-      <div>
+      <!-- <div>
         <input type="checkbox" name="old-cover-page" id="old-cover-page">
         <label for="old-cover-page">Old cover pages</label>
-      </div>
+      </div> -->
       <div>
         <input type="checkbox" name="nix-modules-tool" id="nix-modules-tool">
         <label for="nix-modules-tool">Show Nix modules tool</label>
