Make force SSR a setting

--- a/popup.html
+++ b/popup.html
@@ -74,6 +74,10 @@
         <input type="checkbox" name="auto-debug" id="auto-debug">
         <label for="auto-debug">Show debug pane</label>
       </div>
+      <div>
+        <input type="checkbox" name="force-ssr" id="force-ssr">
+        <label for="force-ssr">Force SSR</label>
+      </div>
     </div>
   </body>
 </html>
