--- a/popup.html
+++ b/popup.html
@@ -54,11 +54,15 @@
     <h2>Settings</h2>
     <p>Toggle different features on or off.</p>
     <div id="settings">
+      <div>
+        <input type="checkbox" name="show-advanced-settings" id="show-advanced-settings">
+        <label for="show-advanced-settings">Show advanced settings</label>
+      </div>
       <!-- <div>
         <input type="checkbox" name="old-cover-page" id="old-cover-page">
         <label for="old-cover-page">Old cover pages</label>
       </div> -->
-      <div>
+      <div class="advanced">
         <input type="checkbox" name="nix-modules-tool" id="nix-modules-tool">
         <label for="nix-modules-tool">Show Nix modules tool</label>
       </div>
@@ -70,11 +74,11 @@
         <input type="checkbox" name="ssh-tool" id="ssh-tool">
         <label for="ssh-tool">Show SSH tool</label>
       </div> -->
-      <div>
+      <div class="advanced">
         <input type="checkbox" name="auto-debug" id="auto-debug">
         <label for="auto-debug">Show debug pane</label>
       </div>
-      <div>
+      <div class="advanced">
         <input type="checkbox" name="force-ssr" id="force-ssr">
         <label for="force-ssr">Force SSR</label>
       </div>
