--- a/popup.html
+++ b/popup.html
@@ -20,7 +20,7 @@
       <li>Shows a user's known alt accounts and other data</li>
       <li>Easily download a user's profile picture</li>
       <li>Read-only invites for private Repls</li>
-      <li>Bring back old cover pages</li>
+      <!-- <li>Bring back old cover pages</li> -->
     </ul>
 
     <h2>Suggest data</h2>
