Use custom domain for suggesting data form in popup

--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,7 @@
     <p>
       If you have some relevant data for someone's profile, please fill out
       <a
-        href="https://xl-replit-backend.luisafk.repl.co/suggestData"
+        href="https://xl-replit.lafkpages.tech/suggestData"
         target="_blank"
         >this form</a
       >
