Add account switcher to features list and fix features list

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,8 @@
 
     <h2>Features</h2>
     <ul>
+      <li>Account switcher</li>
+      <li>Custom tips</li>
       <li>User's email addresses</li>
       <li>Shows a user's known alt accounts and other data</li>
       <li>Easily download a user's profile picture</li>
