--- a/popup.html
+++ b/popup.html
@@ -63,6 +63,10 @@
         <input type="checkbox" name="show-advanced-settings" id="show-advanced-settings">
         <label for="show-advanced-settings">Show advanced settings</label>
       </div>
+      <div>
+        <input type="checkbox" name="account-switcher" id="account-switcher">
+        <label for="account-switcher">Show Account switcher</label>
+      </div>
       <!-- <div>
         <input type="checkbox" name="old-cover-page" id="old-cover-page">
         <label for="old-cover-page">Old cover pages</label>
