Hide extensions beta setting

--- a/popup.html
+++ b/popup.html
@@ -75,10 +75,10 @@
         <input type="checkbox" name="nix-modules-tool" id="nix-modules-tool">
         <label for="nix-modules-tool">Show Nix modules tool</label>
       </div>
-      <div>
+      <!-- <div>
         <input type="checkbox" name="extensions-beta" id="extensions-beta">
         <label for="extensions-beta">Extensions beta</label>
-      </div>
+      </div> -->
       <!-- <div>
         <input type="checkbox" name="ssh-tool" id="ssh-tool">
         <label for="ssh-tool">Show SSH tool</label>
