--- a/popup.html
+++ b/popup.html
@@ -100,6 +100,10 @@
         <input type="checkbox" name="block-graphql" id="block-graphql">
         <label for="block-graphql">Block GraphQL</label>
       </div>
+      <div>
+        <input type="checkbox" name="disable-github-import" id="disable-github-import">
+        <label for="disable-github-import">Disable GitHub import</label>
+      </div>
     </div>
   </body>
 </html>
