Large cursor experiment

--- a/popup.html
+++ b/popup.html
@@ -109,6 +109,10 @@
           <input type="checkbox" name="disable-github-import" id="disable-github-import">
           <label for="disable-github-import">Disable GitHub import</label>
         </div>
+        <div>
+          <input type="checkbox" name="large-cursor" id="large-cursor">
+          <label for="large-cursor">Large cursor</label>
+        </div>
       </div>
     </div>
   </body>
