--- a/popup.html
+++ b/popup.html
@@ -111,7 +111,7 @@
         </div>
         <div>
           <input type="checkbox" name="large-cursor" id="large-cursor">
-          <label for="large-cursor">Large cursor</label>
+          <label for="large-cursor">Large cursors</label>
         </div>
       </div>
     </div>
