Monaco Editor experiment (unfinished)

--- a/popup.html
+++ b/popup.html
@@ -113,6 +113,10 @@
           <input type="checkbox" name="large-cursor" id="large-cursor">
           <label for="large-cursor">Large cursors</label>
         </div>
+        <div>
+          <input type="checkbox" name="monaco" id="monaco">
+          <label for="monaco">Monaco Editor</label>
+        </div>
       </div>
     </div>
   </body>
