Add Monaco to list of features

--- a/popup.html
+++ b/popup.html
@@ -22,6 +22,7 @@
       <li>Shows a user's known alt accounts and other data</li>
       <li>Easily download a user's profile picture</li>
       <li>Read-only invites for private Repls</li>
+      <li>Monaco</li>
       <!-- <li>Bring back old cover pages</li> -->
     </ul>
 
