Move to src, src/public and assets folders

--- a/src/popup.html
+++ b/src/popup.html
@@ -8,7 +8,7 @@
     <title>XL Replit</title>
 
     <script src="popup.js" defer></script>
-    <script src="2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
+    <script src="public/2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
   </head>
   <body>
     <h1>XL Replit</h1>
