--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="popup.css" />
+    <link rel="stylesheet" href="/css/popup.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XL Replit</title>
 
-    <script src="popup.js" defer></script>
-    <script src="public/2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
+    <script src="/js/popup.js" defer></script>
+    <script src="/public/2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
   </head>
   <body>
     <h1>XL Replit</h1>
@@ -28,9 +28,7 @@
     <h2>Suggest data</h2>
     <p>
       If you have some relevant data for someone's profile, please fill out
-      <a
-        href="https://xl-replit.lafkpages.tech/suggestData"
-        target="_blank"
+      <a href="https://xl-replit.lafkpages.tech/suggestData" target="_blank"
         >this form</a
       >
       with the data and it will be reviewed by a moderator.
@@ -44,11 +42,7 @@
       multiple SIDs for different accounts to use with the account switcher.
     </p>
     <div id="sids">
-      <input
-        type="text"
-        id="sid-inp"
-        placeholder="Enter your SID here..."
-      />
+      <input type="text" id="sid-inp" placeholder="Enter your SID here..." />
     </div>
     <div>
       <!-- TODO: fix bug where this always stays disabled. Removed meanwhile -->
@@ -60,11 +54,15 @@
     <p>Toggle different features on or off.</p>
     <div id="settings" class="settings-cont">
       <div>
-        <input type="checkbox" name="show-advanced-settings" id="show-advanced-settings">
+        <input
+          type="checkbox"
+          name="show-advanced-settings"
+          id="show-advanced-settings"
+        />
         <label for="show-advanced-settings">Show advanced settings</label>
       </div>
       <div>
-        <input type="checkbox" name="account-switcher" id="account-switcher">
+        <input type="checkbox" name="account-switcher" id="account-switcher" />
         <label for="account-switcher">Show Account switcher</label>
       </div>
       <!-- <div>
@@ -72,11 +70,11 @@
         <label for="old-cover-page">Old cover pages</label>
       </div> -->
       <div class="advanced">
-        <input type="checkbox" name="show-experiments" id="show-experiments">
+        <input type="checkbox" name="show-experiments" id="show-experiments" />
         <label for="show-experiments">Show experiments</label>
       </div>
       <div class="advanced">
-        <input type="checkbox" name="nix-modules-tool" id="nix-modules-tool">
+        <input type="checkbox" name="nix-modules-tool" id="nix-modules-tool" />
         <label for="nix-modules-tool">Show Nix modules tool</label>
       </div>
       <!-- <div>
@@ -88,11 +86,11 @@
         <label for="ssh-tool">Show SSH tool</label>
       </div> -->
       <div class="advanced">
-        <input type="checkbox" name="auto-debug" id="auto-debug">
+        <input type="checkbox" name="auto-debug" id="auto-debug" />
         <label for="auto-debug">Show debug pane</label>
       </div>
       <div class="advanced">
-        <input type="checkbox" name="force-ssr" id="force-ssr">
+        <input type="checkbox" name="force-ssr" id="force-ssr" />
         <label for="force-ssr">Force SSR</label>
       </div>
     </div>
@@ -102,19 +100,23 @@
       <p>Toggle experiments on or off.</p>
       <div id="experiments" class="settings-cont">
         <div>
-          <input type="checkbox" name="block-graphql" id="block-graphql">
+          <input type="checkbox" name="block-graphql" id="block-graphql" />
           <label for="block-graphql">Block GraphQL</label>
         </div>
         <div>
-          <input type="checkbox" name="disable-github-import" id="disable-github-import">
+          <input
+            type="checkbox"
+            name="disable-github-import"
+            id="disable-github-import"
+          />
           <label for="disable-github-import">Disable GitHub import</label>
         </div>
         <div>
-          <input type="checkbox" name="large-cursor" id="large-cursor">
+          <input type="checkbox" name="large-cursor" id="large-cursor" />
           <label for="large-cursor">Large cursors</label>
         </div>
         <div>
-          <input type="checkbox" name="monaco" id="monaco">
+          <input type="checkbox" name="monaco" id="monaco" />
           <label for="monaco">Monaco Editor</label>
         </div>
       </div>
