--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XL Replit</title>
 
-    <script src="/js/popup.js" defer></script>
+    <script src="/popup.js" defer></script>
     <script src="/public/2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
   </head>
   <body>
