--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>XL Replit</title>
-</head>
-<body>
-  <h1>XL Replit</h1>
-  <p>Placeholder page</p>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>XL Replit</title>
+  </head>
+  <body>
+    <h1>XL Replit</h1>
+    <p>Placeholder page</p>
+  </body>
 </html>
