--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -93,6 +93,10 @@
         <input type="checkbox" name="force-ssr" id="force-ssr" />
         <label for="force-ssr">Force SSR</label>
       </div>
+      <div class="advanced">
+        <input type="checkbox" name="hide-bookish" id="hide-bookish">
+        <label for="hide-bookish">Hide Bookish Memory</label>
+      </div>
     </div>
 
     <div id="experiments-cont">
