--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>XL Replit</title>
+
+    <script src="../index.js"></script>
   </head>
   <body>
     <h1>XL Replit</h1>
