--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,6 +6,8 @@
     <title>XL Replit</title>
 
     <script src="../index.js"></script>
+
+    <link rel="stylesheet" href="/css/xl.css">
   </head>
   <body>
     <h1>XL Replit</h1>
