--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -9,6 +9,8 @@
 
     <script src="/popup.js" defer></script>
     <script src="/public/2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
+
+    <link rel="stylesheet" href="/css/xl.css">
   </head>
   <body>
     <h1>XL Replit</h1>
