IBM Plex Sans, header classes

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/css/xl.css">
   </head>
   <body>
-    <h1>XL Replit</h1>
+    <h1 class="h1">XL Replit</h1>
     <p>Placeholder page</p>
   </body>
 </html>
