--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,7 @@
 
     <script src="../index.js"></script>
 
-    <link rel="stylesheet" href="/css/xl.css">
+    <link rel="stylesheet" href="/css/xl.css" />
   </head>
   <body>
     <h1 class="h1">XL Replit</h1>
