--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -10,7 +10,7 @@
     <script src="/popup.js" defer></script>
     <script src="/public/2.5.3-crypto-sha1-hmac-pbkdf2-blockmodes-aes.js"></script>
 
-    <link rel="stylesheet" href="/css/xl.css">
+    <link rel="stylesheet" href="/css/xl.css" />
   </head>
   <body>
     <h1>XL Replit</h1>
@@ -96,7 +96,7 @@
         <label for="force-ssr">Force SSR</label>
       </div>
       <div class="advanced">
-        <input type="checkbox" name="hide-bookish" id="hide-bookish">
+        <input type="checkbox" name="hide-bookish" id="hide-bookish" />
         <label for="hide-bookish">Hide Bookish Memory</label>
       </div>
     </div>
