Fix popup headers

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="/css/xl.css" />
   </head>
   <body>
-    <h1>XL Replit</h1>
+    <h1 class="h1">XL Replit</h1>
     <p>An enhanced version of Replit.</p>
 
-    <h2>Features</h2>
+    <h2 class="h2">Features</h2>
     <ul>
       <li>Account switcher</li>
       <li>Custom tips</li>
@@ -27,7 +27,7 @@
       <li>Monaco</li>
     </ul>
 
-    <h2>Suggest data</h2>
+    <h2 class="h2">Suggest data</h2>
     <p>
       If you have some relevant data for someone's profile, please fill out
       <a href="https://xl-replit.lafkpages.tech/suggestData" target="_blank"
@@ -36,7 +36,7 @@
       with the data and it will be reviewed by a moderator.
     </p>
 
-    <h2>Replit SID</h2>
+    <h2 class="h2">Replit SID</h2>
     <p>
       Some features of this extension require using your Replit session to
       perform authenticated actions via Replit's GraphQL. To enable these
@@ -52,7 +52,7 @@
       <button id="new-sid">New</button>
     </div>
 
-    <h2>Settings</h2>
+    <h2 class="h2">Settings</h2>
     <p>Toggle different features on or off.</p>
     <div id="settings" class="settings-cont">
       <div>
@@ -102,7 +102,7 @@
     </div>
 
     <div id="experiments-cont">
-      <h2>Experiments</h2>
+      <h2 class="h2">Experiments</h2>
       <p>Toggle experiments on or off.</p>
       <div id="experiments" class="settings-cont">
         <div>
