Custom tips setting

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -67,6 +67,10 @@
         <input type="checkbox" name="account-switcher" id="account-switcher" />
         <label for="account-switcher">Show Account switcher</label>
       </div>
+      <div>
+        <input type="checkbox" name="custom-tips" id="custom-tips" />
+        <label for="custom-tips">Show custom tips</label>
+      </div>
       <!-- <div>
         <input type="checkbox" name="old-cover-page" id="old-cover-page">
         <label for="old-cover-page">Old cover pages</label>
