Popup button variants

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -48,7 +48,7 @@
     </div>
     <div>
       <!-- TODO: fix bug where this always stays disabled. Removed meanwhile -->
-      <button id="save-sid">Save</button>
+      <button id="save-sid" class="primary-bg">Save</button>
       <button id="new-sid">New</button>
     </div>
 
