--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -49,7 +49,7 @@
     <div>
       <!-- TODO: fix bug where this always stays disabled. Removed meanwhile -->
       <button id="save-sid" class="primary-bg">Save</button>
-      <button id="new-sid">New</button>
+      <button id="new-sid" class="outline">New</button>
     </div>
 
     <h2 class="h2">Settings</h2>
