Fix Monaco setting, inject XL settings type

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -126,8 +126,8 @@
           <label for="large-cursor">Large cursors</label>
         </div>
         <div>
-          <input type="checkbox" name="monaco" id="monaco" />
-          <label for="monaco">Monaco Editor</label>
+          <input type="checkbox" name="monaco-editor" id="monaco-editor" />
+          <label for="monaco-editor">Monaco Editor</label>
         </div>
       </div>
     </div>
