Add search provider to features list

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -25,6 +25,7 @@
       <li>Easily download a user's profile picture</li>
       <li>Read-only invites for private Repls</li>
       <li>Monaco</li>
+      <li>Replit search provider</li>
     </ul>
 
     <h2 class="h2">Suggest data</h2>
